# volt

./: .gitignore  CLAUDE.md  Cargo.toml  GUIDE.md  LICENSE  Makefile  README.md  blocks  libblocks.rlib  libshell_intelligence.rlib
.github/workflows/: ci.yml  release.yml
crates/volt-app/: Cargo.toml
crates/volt-app/src/: app.rs  config.rs  event.rs  main.rs  view.rs  window.rs
crates/volt-core/: Cargo.toml
crates/volt-core/src/: cell.rs  color.rs  cursor.rs  damage.rs  grid.rs  lib.rs  modes.rs  osc.rs  parser.rs  scrollback.rs  selection.rs
crates/volt-pty/: Cargo.toml
crates/volt-pty/src/: lib.rs  pty.rs  reader.rs  signal.rs
crates/volt-renderer/: Cargo.toml
crates/volt-renderer/src/: atlas.rs  damage.rs  lib.rs  pipeline.rs  renderer.rs  shaders.rs  text.rs
frontends/rioterm/: Cargo.toml
frontends/rioterm/src/: ai_assistant.rs  application.rs  audit_log.rs  bookmarks.rs  config_import.rs  connections.rs  consequences.rs  dock_badge.rs  env_inspector.rs  file_opener.rs  image_picker.rs  layouts.rs  main.rs  notifications.rs  panic.rs  quake_mode.rs  retroactive_pipe.rs  session_export.rs  settings_editor.rs  shell_integration.rs  shell_intelligence.rs  shell_profiler.rs  slash_commands.rs  snippets.rs  structured_output.rs  test_runner.rs  time_travel.rs  tmux_cc.rs  triggers.rs  undo.rs  window_state.rs
frontends/rioterm/src/bindings/: mod.rs
frontends/rioterm/src/context/: blocks.rs  grid.rs  mod.rs  title.rs
frontends/rioterm/src/mouse/: mod.rs
frontends/rioterm/src/renderer/: block_renderer.rs  mod.rs  navigation.rs  utils.rs
frontends/rioterm/src/router/: mod.rs  window.rs
frontends/rioterm/src/router/routes/: assistant.rs  bookmarks_viewer.rs  connections_viewer.rs  dialog.rs  env_viewer.rs  help.rs  history.rs  layouts_viewer.rs  mod.rs  session_export.rs  session_sharing.rs  settings.rs  slash_commands_viewer.rs  time_travel.rs  tmux_picker.rs  welcome.rs
frontends/rioterm/src/screen/: mod.rs
misc/osx/Volt.app/Contents/: Info.plist
misc/osx/Volt.app/Contents/Resources/: icon-classic.icns  icon.icns
resources/Volt.app/Contents/: Info.plist
rio-backend/examples/: advance_until_terminated_benchmark.rs  batch_utf8_benchmark.rs  parser_comparison_benchmark.rs  rio_usage_benchmark.rs  simd_performance_test.rs  utf8_benchmark.rs
rio-backend/src/: simd_utf8.rs
rio-backend/src/config/: defaults.rs  mod.rs  navigation.rs
rio-backend/src/crosswords/: mod.rs
rio-backend/src/error/: mod.rs
rio-backend/src/event/: mod.rs
rio-backend/src/performer/: handler.rs
rio-window/src/platform_impl/macos/: app_delegate.rs
sugarloaf/: Cargo.toml
sugarloaf/src/: sugarloaf.rs
sugarloaf/src/components/filters/: mod.rs
sugarloaf/src/sugarloaf/: graphics.rs  primitives.rs
