[package]
name = "volt"
description = "macOS app shell — AppKit window, event loop, config, tabs/splits"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
volt-core = { path = "../volt-core" }
volt-pty = { path = "../volt-pty" }
volt-renderer = { path = "../volt-renderer" }
objc2.workspace = true
objc2-foundation.workspace = true
objc2-app-kit.workspace = true
objc2-metal.workspace = true
objc2-quartz-core.workspace = true
crossbeam-channel.workspace = true
cosmic-text.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
libc.workspace = true

[dev-dependencies]
