[package]
name = "volt-core"
description = "Terminal grid, VT parser, scrollback, selection, and terminal state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vte.workspace = true
bitvec.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
