[package]
name = "volt-pty"
description = "PTY creation, I/O, and signal handling via raw forkpty"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
libc.workspace = true
mio.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
